--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "metadata-scraper": "^0.2.60"
+    "metadata-scraper": "^0.2.60",
+    "mysql2": "^2.3.3",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.6"
   }
 }
