--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "start http://localhost:3000 && node index",
+    "dev": "start node index && start http://localhost:3000",
     "start": "start http://localhost:3000  && nodemon index"
   },
   "keywords": [],
